--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-styles.css
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -15,9 +14,9 @@ header {
     max-width: 400px;
     margin: auto;
     padding: 20px;
-    background: white;
+    background: rgba(255, 255, 255,0.30);
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 10px 10px 10px rgba(255, 255, 255, 0.5);
 }
 
 label {
@@ -53,6 +52,3 @@ h2 {
 p {
     font-size: 18px;
 }
-
-
-
